--- a/examples/react-toolbox-icon/public/index.html
+++ b/examples/react-toolbox-icon/public/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/react-toolbox-theme.css">
     <title>React App</title>
   </head>
   <body>
